--- a/index.html
+++ b/index.html
@@ -129,9 +129,20 @@
           <tbody>
           <tr>
             <th colspan="2">
+              <div class="big-day">16</div>
+              <div>Sunday</div>
+              <div>November 2025</div>
+            </th>
+          </tr>
+          <tr>
+            <td><img src="img/stanislaus.png"></td>
+            <td>Unofficial pre-opening at 🍻<a href="https://stanislausbrewskovitch.nl/">Stanislaus Brewskovitch</a></td>
+          </tr>
+          <tr>
+            <th colspan="2">
               <div class="big-day">17</div>
               <div>Monday</div>
-              <div>November, 2025</div>
+              <div>November 2025</div>
             </th>
           </tr>
           <tr>
@@ -160,29 +171,46 @@
                 <tr>
                   <td>11:30–11:50</td>
                   <td>🚀</td>
-                  <td>An Introduction to Indirect Code Completion</td>
+                  <td>
+                    <span class="talk">An Introduction to Indirect Code Completion</span>
+                    (<span class="presenter">Nhat</span> and <span class="presenter">Vadim Zaytsev</span>)
+                </td>
                 </tr>
                 <tr>
                   <td>11:50–12:00</td>
                   <td>🌟</td>
-                  <td>Same Size, Different Costs</td>
+                  <td>
+                    <span class="talk">Same Size, Different Costs: Phase-Level Energy Variations in Transformer Models during Code Generation</span>
+                    (<span class="presenter">Lola Solovyeva</span>)
+                  </td>
                 </tr>
                 <tr>
                   <td>12:00–12:10</td>
                   <td>🌟</td>
-                  <td>The Cost of AI-Assisted Coding</td>
+                  <td>
+                    <span class="talk">The Cost of AI-Assisted Coding: Energy vs. Accuracy in Language Models</span>
+                    (<span class="presenter">Negar Alizadeh</span>,
+                    <span class="presenter">Boris Belchev</span>,
+                    <span class="presenter">Nishant Saurabh</span> and
+                    <span class="presenter">Patricia Kelbert</span>)
+                  </td>
                 </tr>
                 <tr>
                   <td>12:10–12:30</td>
                   <td>🚀</td>
-                  <td>Bridging CPU and GPU in Rust</td>
+                  <td>
+                    <span class="talk">Bridging CPU and GPU in Rust</span>
+                    (<span class="presenter">Niek Aukes</span>,
+                    <span class="presenter">Cristian-Andrei Begu</span> and
+                    <span class="presenter">Georgiana Caltais</span>)
+                  </td>
                 </tr>
               </table>
             </td>
           </tr>
           <tr>
             <td>12:30 – 14:00</td>
-            <td>Lunch</td>
+            <td>Lunch + campus walk</td>
           </tr>
           <tr>
             <td>14:00 – 15:00</td>
@@ -194,27 +222,53 @@
                 <tr>
                   <td>14:00–14:10</td>
                   <td>🌟</td>
-                  <td>Sampling Threat when Mining Generalizable Inter-Library Usage Patterns</td>
+                  <td>
+                    <span class="talk">Sampling Threat when Mining Generalizable Inter-Library Usage Patterns</span>
+                    (<span class="presenter">Yunior Pacheco</span>,
+                    <span class="presenter">Coen De Roover</span> and
+                    <span class="presenter">Johannes Härtel</span>)
+                  </td>
                 </tr>
                 <tr>
                   <td>14:10–14:20</td>
                   <td>🌟</td>
-                  <td>Analysis of Code Clones in GitHub Actions Workflows</td>
+                  <td>
+                    <span class="talk">An Analysis of Code Clones in GitHub Actions Workflows</span>
+                    (<span class="presenter">Guillaume Cardoen</span>,
+                    <span class="presenter">Alexandre Decan</span> and
+                    <span class="presenter">Tom Mens</span>)
+                  </td>
                 </tr>
                 <tr>
                   <td>14:20–14:30</td>
                   <td>🌟</td>
-                  <td>Determining Code Proficiency Levels from Python Textbooks</td>
+                  <td>
+                    <span class="talk">Determining Code Proficiency Levels from Python Textbooks</span>
+                    (<span class="presenter">Ruksit Rojpaisarnkit</span>,
+                    <span class="presenter">Gregorio Robles</span>,
+                    <span class="presenter">Jesús M. González-Barahona</span>,
+                    <span class="presenter">Kenichi Matsumoto</span> and
+                    <span class="presenter">Raula Gaikovina Kula</span>)
+                  </td>
                 </tr>
                 <tr>
                   <td>14:30–14:50</td>
                   <td>🔬</td>
-                  <td>Building Reliable Interfaces for Developer Guidance and Exploration</td>
+                  <td>
+                    <span class="talk">BRIDGE: Building Reliable Interfaces for Developer Guidance and Exploration through Static Analysis and LLM Translation</span>
+                    (<span class="presenter">Krishna Narasimhan</span> and <span class="presenter">Mairieli Wessel</span>)
+                  </td>
                 </tr>
                 <tr>
                   <td>14:50–15:00</td>
                   <td>🌟</td>
-                  <td>On the Automation and Reuse Practices in GitHub Actions</td>
+                  <td>
+                    <span class="talk">On the Automation and Reuse Practices in GitHub Actions: Results of a Qualitative Survey</span>
+                    (<span class="presenter">Hassan Onsori Delicheh</span>,
+                    <span class="presenter">Guillaume Cardoen</span>,
+                    <span class="presenter">Alexandre Decan</span> and
+                    <span class="presenter">Tom Mens</span>)
+                  </td>
                 </tr>
               </table>
             </td>
@@ -233,24 +287,36 @@
                 <tr>
                   <td>15:30–15:50</td>
                   <td>🚀</td>
-                  <td>Preliminary Survey on CPS Testing in Various Domains of the Industry</td>
+                  <td>
+                    <span class="talk">Preliminary survey on CPS testing in various domains of the industry</span>
+                    (<span class="presenter">Guillaume Nguyen</span> and <span class="presenter">Xavier Devroey</span>)
+                  </td>
                 </tr>
                 <tr>
                   <td>15:50–16:10</td>
                   <td>🔬</td>
-                  <td>A Framework for Generation of Synthetic Data to Compare Flakiness Scores</td>
+                  <td>
+                    <span class="talk">FlaDaGe: A Framework for Generation of Synthetic Data to Compare Flakiness Scores</span>
+                    (<span class="presenter">Mert Ege Can</span>,
+                    <span class="presenter">Joanna Kisaakye</span>,
+                    <span class="presenter">Mutlu Beyazıt</span> and
+                    <span class="presenter">Serge Demeyer</span>)
+                  </td>
                 </tr>
                 <tr>
                   <td>16:10–16:30</td>
                   <td>🔁</td>
-                  <td>Evaluating Test-Driven Code Generation: A Replication Study</td>
+                  <td>
+                    <span class="talk">Evaluating Test-Driven Code Generation: A Replication Study</span>
+                    (<span class="presenter">Giovanni Rosa</span> and <span class="presenter">Jesús Maria González-Barahona</span>)
+                  </td>
                 </tr>
               </table>
             </td>
           </tr>
           <tr>
             <td>17:00 +</td>
-            <td>Dinner + Social event</td>
+            <td>Dinner at U Park Hotel</td>
           </tr>
           <tr class="sep">
             <td>&nbsp;</td>
@@ -259,7 +325,7 @@
             <th colspan="2">
               <div class="big-day">18</div>
               <div>Tuesday</div>
-              <div>November, 2025</div>
+              <div>November 2025</div>
             </th>
           </tr>
           <tr>
@@ -283,27 +349,52 @@
                 <tr>
                   <td>11:00–11:20</td>
                   <td>🔬</td>
-                  <td>On the Evolution of Direct Dependencies in npm Packages</td>
+                  <td>
+                    <span class="talk">On the Evolution of Direct Dependencies in npm Packages</span>
+                    (<span class="presenter">Shahin Ebrahimi-Kia</span>,
+                      <span class="presenter">Jesús M. González-Barahona</span>,
+                      <span class="presenter">David Moreno-Lumbreras</span>,
+                      <span class="presenter">Gregorio Robles</span> and
+                      <span class="presenter">Tom Mens</span>)
+                  </td>
                 </tr>
                 <tr>
                   <td>11:20–11:30</td>
                   <td>🌟</td>
-                  <td>An Empirical Analysis of the GitHub Actions Language Usage and Evolution</td>
+                  <td>
+                    <span class="talk">An Empirical Analysis of the GitHub Actions Language Usage and Evolution</span>
+                    (<span class="presenter">Aref Talebzadeh Bardsiri</span>,
+                    <span class="presenter">Alexandre Decan</span> and
+                    <span class="presenter">Tom Mens</span>)
+                  </td>
                 </tr>
                 <tr>
                   <td>11:30–11:40</td>
                   <td>🌟</td>
-                  <td>Language-Level Support for Multiple Versions for Software Evolution</td>
+                  <td>
+                    <span class="talk">Language-Level Support for Multiple Versions for Software Evolution</span>
+                    (<span class="presenter">Tomoyuki Aotani</span>,
+                      <span class="presenter">Satsuki Kasuya</span>,
+                      <span class="presenter">Luthfan Lubis</span>,
+                      <span class="presenter">Hidehiko Masuhara</span> and
+                      <span class="presenter">Yudai Tanabe</span>)
+                  </td>
                 </tr>
                 <tr>
                   <td>11:40–11:50</td>
                   <td>🌟</td>
-                  <td>On the Transferability of a Bot Detection Model from GitHub to GitLab</td>
+                  <td>
+                    <span class="talk">On the Transferability of a Bot Detection Model from GitHub to GitLab</span>
+                    (<span class="presenter">Cyril Moreau</span>)
+                  </td>
                 </tr>
                 <tr>
                   <td>11:50–12:00</td>
                   <td>🌟</td>
-                  <td>Evolution-Resilient Class Contours</td>
+                  <td>
+                    <span class="talk">Evolution-Resilient Class Contours</span>
+                    (<span class="presenter">Mattia Giannaccari</span> and <span class="presenter">Marco Raglianti</span>)
+                  </td>
                 </tr>
               </table>
             </td>
@@ -330,17 +421,32 @@
                 <tr>
                   <td>14:30–14:50</td>
                   <td>🚀</td>
-                  <td>On the Structuring of <span class="latex">L<span class="a">A</span>T<span class="e">E</span>X</span> Projects</td>
+                  <td>
+                    <span class="talk">On the Structuring of <span class="latex">L<span class="a">A</span>T<span class="e">E</span>X</span> Projects</span>
+                    (<span class="presenter">Wouter ten Brinke</span>,
+                    <span class="presenter">Bart Griepsma</span>,
+                    <span class="presenter">Aleksandra Ignatovič</span>,
+                    <span class="presenter">Nhat</span> and
+                    <span class="presenter">Vadim Zaytsev</span>)
+                    </td>
                 </tr>
                 <tr>
                   <td>14:50–15:10</td>
                   <td>🚀</td>
-                  <td>From Verification Tool to Research Vessel</td>
+                  <td>
+                    <span class="talk">ClassViz: From Verification Tool to Research Vessel</span>
+                    (<span class="presenter">Satrio Adi Rukmono</span>)
+                  </td>
                 </tr>
                 <tr>
                   <td>15:10–15:30</td>
                   <td>🔬</td>
-                  <td>Pseudonymization as a Service</td>
+                  <td>
+                    <span class="talk">Pseudonymization as a Service: Compartmentalizing and Controlling Data Processing in Evolving Systems with Micropseudonymization</span>
+                    (<span class="presenter">Job Doesburg</span>,
+                    <span class="presenter">Bernard van Gastel</span> and
+                    <span class="presenter">Erik Poll</span>)
+                  </td>
                 </tr>
               </table>
             </td>
