--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           </tr>
           <tr>
             <td>12:30 – 14:00</td>
-            <td>Lunch + campus walk</td>
+            <td>Lunch + Campus walk</td>
           </tr>
           <tr>
             <td>14:00 – 15:00</td>
@@ -786,10 +786,19 @@
       <div class="col">
         <p class="text">
           The hosting organisation is the <a href="https://www.utwente.nl/en/contact/route/">University of Twente</a>,
-          the location is the <strong>C2 room</strong> of the <a href="https://www.uparkhotel.nl/en">U Park Hotel</a> on
-          the campus of the said university.
-          Registrations are handled through <a href="https://www.eventbrite.com/e/tickets-benevol-2025-1947032078359">EventBrite</a>.
+          the location is the <strong>C2 room</strong> of the <a href="https://www.uparkhotel.nl/en">U Park Hotel</a>
+          on the campus of the said university.
         </p>
+
+        <p class="text">
+            Registrations are handled through <a href="https://www.eventbrite.com/e/tickets-benevol-2025-1947032078359">EventBrite</a>.
+        </p>
+
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4886.145664533968!2d6.848552289726094!3d52.24206074261589!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b813c89a5f5b5d%3A0xb418abdfcf79aa17!2sU%20Parkhotel!5e0!3m2!1sen!2snl!4v1762341330387!5m2!1sen!2snl"
+            width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+
         <p class="text">
           The University of Twente is located between two cities: <strong>Hengelo</strong> and <strong>Enschede</strong>.
           We recommend choosing one of the following options for your stay:
@@ -797,37 +806,44 @@
         <ul>
           <li>
             <strong>Campus</strong>: stay directly at the <a href="https://www.uparkhotel.nl/en/sleep">U Park Hotel</a>.
-            If you mention you are coming for BENEVOL, they will charge you the discounted price of €123–138 for the
-            night between the workshop days and/or €133–138 for the night before the workshop. We have reserved a small
-            block of room specifically for this purpose. If they run out of available rooms or if you prefer a cheaper
-            alternative, we recommend <a href="https://www.fletcherhotelenschede.nl/en/">De Broeierd (Fletcher)</a>
+            If you mention you are coming for BENEVOL, they will charge you the discounted price of €123–138
+            for the night between the workshop days and/or €133–138 for the night before the workshop.
+            We have reserved a small block of room specifically for this purpose.
+            If they run out of available rooms or if you prefer a cheaper alternative,
+            we recommend <a href="https://www.fletcherhotelenschede.nl/en/">De Broeierd (Fletcher)</a>
             which is across the road from the campus and will put you at 15–20 minutes walking from the workshop venue.
           </li>
           <li>
             <strong>City</strong>: choose either <a
-              href="https://www.booking.com/searchresults.en-gb.html?ss=Hengelo%2C+Overijssel%2C+Netherlands&amp;efdco=1&amp;label=gen173nr-10CAEoggI46AdIM1gEaKkBiAEBmAEzuAEHyAEP2AED6AEB-AEBiAIBqAIBuAKD8aTIBsACAdICJDQ1YjNhZDZlLTdlYTQtNDI4OC05YTIzLWY1ZDA0YjIzMDc5Y9gCAeACAQ&amp;sid=4ca5879ec1b78e77c3df05bfffde7d2b&amp;aid=304142&amp;lang=en-gb&amp;sb=1&amp;src_elem=sb&amp;src=index&amp;dest_id=-2145890&amp;dest_type=city&amp;ac_position=0&amp;ac_click_type=b&amp;ac_langcode=en&amp;ac_suggestion_list_length=5&amp;search_selected=true&amp;search_pageview_id=a8c8a401eaf10866&amp;ac_meta=GhBhOGM4YTQwMWVhZjEwODY2IAAoATICZW46BGhlbmdAAEoAUAA%3D&amp;checkin=2025-11-16&amp;checkout=2025-11-18&amp;group_adults=1&amp;no_rooms=1&amp;group_children=0#map_opened">Hengelo</a>
-            or <a
-              href="https://www.booking.com/searchresults.en-gb.html?label=gen173nr-10CAEoggI46AdIM1gEaKkBiAEBmAEzuAEHyAEP2AED6AEB-AEBiAIBqAIBuAKD8aTIBsACAdICJDQ1YjNhZDZlLTdlYTQtNDI4OC05YTIzLWY1ZDA0YjIzMDc5Y9gCAeACAQ&amp;sid=4ca5879ec1b78e77c3df05bfffde7d2b&amp;aid=304142&amp;ss=Enschede+Station%2C+Enschede%2C+Overijssel%2C+Netherlands&amp;ssne=Hengelo&amp;ssne_untouched=Hengelo&amp;lang=en-gb&amp;src=searchresults&amp;dest_id=434&amp;dest_type=landmark&amp;ac_position=0&amp;ac_click_type=b&amp;ac_langcode=en&amp;ac_suggestion_list_length=5&amp;search_selected=true&amp;search_pageview_id=4deb000e657a076e&amp;checkin=2025-11-16&amp;checkout=2025-11-18&amp;group_adults=1&amp;no_rooms=1&amp;group_children=0&amp;nflt=oos%3D1">Enschede</a>
-            and stay in one of the bookable hotels around their corresponding Central Station. Then, take <em>bus 9</em>
-            <a
+                href="https://www.booking.com/searchresults.en-gb.html?ss=Hengelo%2C+Overijssel%2C+Netherlands&amp;efdco=1&amp;label=gen173nr-10CAEoggI46AdIM1gEaKkBiAEBmAEzuAEHyAEP2AED6AEB-AEBiAIBqAIBuAKD8aTIBsACAdICJDQ1YjNhZDZlLTdlYTQtNDI4OC05YTIzLWY1ZDA0YjIzMDc5Y9gCAeACAQ&amp;sid=4ca5879ec1b78e77c3df05bfffde7d2b&amp;aid=304142&amp;lang=en-gb&amp;sb=1&amp;src_elem=sb&amp;src=index&amp;dest_id=-2145890&amp;dest_type=city&amp;ac_position=0&amp;ac_click_type=b&amp;ac_langcode=en&amp;ac_suggestion_list_length=5&amp;search_selected=true&amp;search_pageview_id=a8c8a401eaf10866&amp;ac_meta=GhBhOGM4YTQwMWVhZjEwODY2IAAoATICZW46BGhlbmdAAEoAUAA%3D&amp;checkin=2025-11-16&amp;checkout=2025-11-18&amp;group_adults=1&amp;no_rooms=1&amp;group_children=0#map_opened">
+              Hengelo</a> or <a
+              href="https://www.booking.com/searchresults.en-gb.html?label=gen173nr-10CAEoggI46AdIM1gEaKkBiAEBmAEzuAEHyAEP2AED6AEB-AEBiAIBqAIBuAKD8aTIBsACAdICJDQ1YjNhZDZlLTdlYTQtNDI4OC05YTIzLWY1ZDA0YjIzMDc5Y9gCAeACAQ&amp;sid=4ca5879ec1b78e77c3df05bfffde7d2b&amp;aid=304142&amp;ss=Enschede+Station%2C+Enschede%2C+Overijssel%2C+Netherlands&amp;ssne=Hengelo&amp;ssne_untouched=Hengelo&amp;lang=en-gb&amp;src=searchresults&amp;dest_id=434&amp;dest_type=landmark&amp;ac_position=0&amp;ac_click_type=b&amp;ac_langcode=en&amp;ac_suggestion_list_length=5&amp;search_selected=true&amp;search_pageview_id=4deb000e657a076e&amp;checkin=2025-11-16&amp;checkout=2025-11-18&amp;group_adults=1&amp;no_rooms=1&amp;group_children=0&amp;nflt=oos%3D1">
+            Enschede</a> and stay in one of the bookable hotels around their corresponding Central Station.
+            Then, take <em>bus 9</em> towards the campus, either <a
                 href="https://www.google.com/maps/dir/Hengelo,+Centraal+Station,+7551+CN+Hengelo/U+Parkhotel,+De+Veldmaat,+Enschede/@52.2422187,6.7990764,13z/data=!3m2!4b1!5s0x47b813d9720e2eed:0x59d493eb7abb728f!4m14!4m13!1m5!1m1!1s0x47b811e3544f3229:0xbaee896395ebc888!2m2!1d6.7940889!2d52.2623014!1m5!1m1!1s0x47b813c89a5f5b5d:0xb418abdfcf79aa17!2m2!1d6.8555314!2d52.2430232!3e3?entry=ttu&amp;g_ep=EgoyMDI1MTAyOS4yIKXMDSoASAFQAw%3D%3D">from
-              Hengelo</a> towards the campus or <a
+              Hengelo</a> or <a
               href="https://www.google.com/maps/dir/Enschede+Centraal+Station,+Niederlande,+Enschede/U+Parkhotel,+De+Veldmaat,+Enschede/@52.231688,6.8443782,14z/data=!3m2!4b1!5s0x47b813d9720e2eed:0x59d493eb7abb728f!4m14!4m13!1m5!1m1!1s0x47b8147510042cfd:0x6ad8eb288733dbeb!2m2!1d6.89025!2d52.22236!1m5!1m1!1s0x47b813c89a5f5b5d:0xb418abdfcf79aa17!2m2!1d6.8555314!2d52.2430232!3e3?entry=ttu&amp;g_ep=EgoyMDI1MTAyOS4yIKXMDSoASAFQAw%3D%3D">from
-            Enschede</a> towards the campus, and exit it at either <em>Kennispark/UT</em> or
-            <em>Westerbegraafplaats/UT</em>. The bus from either central station to the campus will take to the venue in
-            20–25
-            minutes including the walking time towards it. You pay on the bus by swiping your bank card at the entrance
-            and exit without any registration, but you can also ask the human driver to give you a more expensive but
-            old-fashioned paper ticket.
+            Enschede</a>, and exit it at either <em>Kennispark/UT</em> or <em>Westerbegraafplaats/UT</em>.
+            Commuting by bus from either central station will take 20–25 minutes,
+            including the walking time, to the venue.
+            You can pay on the bus by swiping your bank card at the entrance
+            and exit without any registration.
+            Alternatively, you can also ask the human driver to give you a more expensive but old-fashioned paper
+            ticket.
           </li>
         </ul>
         <p class="text">
           The former option adds a bit to your initial and final travel time, but puts you one elevator ride away from
           the workshop and enables you to take a stroll through our very green campus early in the morning or late in
-          the afternoon. The campus is essentially a town of its own, with cafés, supermarkets, hairdressers, swimming
-          pools, and whatnot. The latter option simplifies your journey but adds a bus ride at the start and end of each
-          day. Hengelo is slightly easier to reach from Germany and Enschede is slightly easier to reach from the west
-          of the Netherlands. Choose wisely! And do get in touch with general/local chairs if you need any assistance.
+          the afternoon.
+          The campus is essentially a town of its own, with cafés, supermarkets, hairdressers, swimming pools, and
+          whatnot.
+          The latter option simplifies your journey but adds a bus ride at the start and end of each day.
+          Hengelo is slightly easier to reach from Germany,
+          and Enschede is slightly easier to reach from the west of the Netherlands.
+        </p>
+        <p class="text">
+          Choose wisely! And do get in touch with general/local chairs if you need any assistance.
         </p>
       </div>
     </div>
