--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
         <ul>
           <li><b>Submission Deadline:</b> Fri 3 October 2025</li>
           <li><b>Author Notification Deadline:</b> Fri 24 October 2025</li>
-          <li><b>Author <a href="https://www.eventbrite.com/e/tickets-benevol-2025-1947032078359">Registration</a>
+          <li><b>Author <a href="https://www.eventbrite.com/e/tickets-benevol-2025-1947032078359" target="_blank">Registration</a>
             Deadline:</b> <strong class="red">Mon 10 November 2025</strong></li>
           <li><b><strong class="grn">Pre</strong>-proceedings Camera-Ready Deadline:</b> Fri 7 November 2025</li>
           <li><b>Workshop Date:</b> Mon–Tue <strong class="red">17–18 November 2025</strong></li>
@@ -788,10 +788,14 @@
           The hosting organisation is the <a href="https://www.utwente.nl/en/contact/route/">University of Twente</a>,
           the location is the <strong>C2 room</strong> of the <a href="https://www.uparkhotel.nl/en">U Park Hotel</a>
           on the campus of the said university.
+          Registrations are handled through <a href="https://www.eventbrite.com/e/tickets-benevol-2025-1947032078359" target="_blank">EventBrite</a>.
         </p>
 
-        <p class="text">
-            Registrations are handled through <a href="https://www.eventbrite.com/e/tickets-benevol-2025-1947032078359">EventBrite</a>.
+        <p style="text-align: center;">
+          <button class="cta"
+                  onclick="window.open('https://www.eventbrite.com/e/tickets-benevol-2025-1947032078359', '_blank')">
+            Register Now
+          </button>
         </p>
 
         <iframe
@@ -815,13 +819,13 @@
           </li>
           <li>
             <strong>City</strong>: choose either <a
-                href="https://www.booking.com/searchresults.en-gb.html?ss=Hengelo%2C+Overijssel%2C+Netherlands&amp;efdco=1&amp;label=gen173nr-10CAEoggI46AdIM1gEaKkBiAEBmAEzuAEHyAEP2AED6AEB-AEBiAIBqAIBuAKD8aTIBsACAdICJDQ1YjNhZDZlLTdlYTQtNDI4OC05YTIzLWY1ZDA0YjIzMDc5Y9gCAeACAQ&amp;sid=4ca5879ec1b78e77c3df05bfffde7d2b&amp;aid=304142&amp;lang=en-gb&amp;sb=1&amp;src_elem=sb&amp;src=index&amp;dest_id=-2145890&amp;dest_type=city&amp;ac_position=0&amp;ac_click_type=b&amp;ac_langcode=en&amp;ac_suggestion_list_length=5&amp;search_selected=true&amp;search_pageview_id=a8c8a401eaf10866&amp;ac_meta=GhBhOGM4YTQwMWVhZjEwODY2IAAoATICZW46BGhlbmdAAEoAUAA%3D&amp;checkin=2025-11-16&amp;checkout=2025-11-18&amp;group_adults=1&amp;no_rooms=1&amp;group_children=0#map_opened">
-              Hengelo</a> or <a
+              href="https://www.booking.com/searchresults.en-gb.html?ss=Hengelo%2C+Overijssel%2C+Netherlands&amp;efdco=1&amp;label=gen173nr-10CAEoggI46AdIM1gEaKkBiAEBmAEzuAEHyAEP2AED6AEB-AEBiAIBqAIBuAKD8aTIBsACAdICJDQ1YjNhZDZlLTdlYTQtNDI4OC05YTIzLWY1ZDA0YjIzMDc5Y9gCAeACAQ&amp;sid=4ca5879ec1b78e77c3df05bfffde7d2b&amp;aid=304142&amp;lang=en-gb&amp;sb=1&amp;src_elem=sb&amp;src=index&amp;dest_id=-2145890&amp;dest_type=city&amp;ac_position=0&amp;ac_click_type=b&amp;ac_langcode=en&amp;ac_suggestion_list_length=5&amp;search_selected=true&amp;search_pageview_id=a8c8a401eaf10866&amp;ac_meta=GhBhOGM4YTQwMWVhZjEwODY2IAAoATICZW46BGhlbmdAAEoAUAA%3D&amp;checkin=2025-11-16&amp;checkout=2025-11-18&amp;group_adults=1&amp;no_rooms=1&amp;group_children=0#map_opened">
+            Hengelo</a> or <a
               href="https://www.booking.com/searchresults.en-gb.html?label=gen173nr-10CAEoggI46AdIM1gEaKkBiAEBmAEzuAEHyAEP2AED6AEB-AEBiAIBqAIBuAKD8aTIBsACAdICJDQ1YjNhZDZlLTdlYTQtNDI4OC05YTIzLWY1ZDA0YjIzMDc5Y9gCAeACAQ&amp;sid=4ca5879ec1b78e77c3df05bfffde7d2b&amp;aid=304142&amp;ss=Enschede+Station%2C+Enschede%2C+Overijssel%2C+Netherlands&amp;ssne=Hengelo&amp;ssne_untouched=Hengelo&amp;lang=en-gb&amp;src=searchresults&amp;dest_id=434&amp;dest_type=landmark&amp;ac_position=0&amp;ac_click_type=b&amp;ac_langcode=en&amp;ac_suggestion_list_length=5&amp;search_selected=true&amp;search_pageview_id=4deb000e657a076e&amp;checkin=2025-11-16&amp;checkout=2025-11-18&amp;group_adults=1&amp;no_rooms=1&amp;group_children=0&amp;nflt=oos%3D1">
             Enschede</a> and stay in one of the bookable hotels around their corresponding Central Station.
             Then, take <em>bus 9</em> towards the campus, either <a
-                href="https://www.google.com/maps/dir/Hengelo,+Centraal+Station,+7551+CN+Hengelo/U+Parkhotel,+De+Veldmaat,+Enschede/@52.2422187,6.7990764,13z/data=!3m2!4b1!5s0x47b813d9720e2eed:0x59d493eb7abb728f!4m14!4m13!1m5!1m1!1s0x47b811e3544f3229:0xbaee896395ebc888!2m2!1d6.7940889!2d52.2623014!1m5!1m1!1s0x47b813c89a5f5b5d:0xb418abdfcf79aa17!2m2!1d6.8555314!2d52.2430232!3e3?entry=ttu&amp;g_ep=EgoyMDI1MTAyOS4yIKXMDSoASAFQAw%3D%3D">from
-              Hengelo</a> or <a
+              href="https://www.google.com/maps/dir/Hengelo,+Centraal+Station,+7551+CN+Hengelo/U+Parkhotel,+De+Veldmaat,+Enschede/@52.2422187,6.7990764,13z/data=!3m2!4b1!5s0x47b813d9720e2eed:0x59d493eb7abb728f!4m14!4m13!1m5!1m1!1s0x47b811e3544f3229:0xbaee896395ebc888!2m2!1d6.7940889!2d52.2623014!1m5!1m1!1s0x47b813c89a5f5b5d:0xb418abdfcf79aa17!2m2!1d6.8555314!2d52.2430232!3e3?entry=ttu&amp;g_ep=EgoyMDI1MTAyOS4yIKXMDSoASAFQAw%3D%3D">from
+            Hengelo</a> or <a
               href="https://www.google.com/maps/dir/Enschede+Centraal+Station,+Niederlande,+Enschede/U+Parkhotel,+De+Veldmaat,+Enschede/@52.231688,6.8443782,14z/data=!3m2!4b1!5s0x47b813d9720e2eed:0x59d493eb7abb728f!4m14!4m13!1m5!1m1!1s0x47b8147510042cfd:0x6ad8eb288733dbeb!2m2!1d6.89025!2d52.22236!1m5!1m1!1s0x47b813c89a5f5b5d:0xb418abdfcf79aa17!2m2!1d6.8555314!2d52.2430232!3e3?entry=ttu&amp;g_ep=EgoyMDI1MTAyOS4yIKXMDSoASAFQAw%3D%3D">from
             Enschede</a>, and exit it at either <em>Kennispark/UT</em> or <em>Westerbegraafplaats/UT</em>.
             Commuting by bus from either central station will take 20–25 minutes,
