feat: Set base link target to `_blank`

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link href="css/creative.css" rel="stylesheet">
   <link href="css/mundane.css" rel="stylesheet">
 
+  <base target="_blank">
 </head>
 
 <body id="page-top">
@@ -135,7 +136,7 @@
             </th>
           </tr>
           <tr>
-            <td><img src="img/stanislaus.png"></td>
+            <td><img src="img/stanislaus.png" alt="stanislaus logo"></td>
             <td style="vertical-align: middle;">
               Unofficial pre-opening at 🍻<a href="https://stanislausbrewskovitch.nl/">Stanislaus Brewskovitch</a>
             </td>
@@ -598,7 +599,7 @@
         <ul>
           <li><b>Submission Deadline:</b> Fri 3 October 2025</li>
           <li><b>Author Notification Deadline:</b> Fri 24 October 2025</li>
-          <li><b>Author <a href="https://www.eventbrite.com/e/tickets-benevol-2025-1947032078359" target="_blank">Registration</a>
+          <li><b>Author <a href="https://www.eventbrite.com/e/tickets-benevol-2025-1947032078359">Registration</a>
             Deadline:</b> <strong class="red">Mon 10 November 2025</strong></li>
           <li><b><strong class="grn">Pre</strong>-proceedings Camera-Ready Deadline:</b> Fri 7 November 2025</li>
           <li><b>Workshop Date:</b> Mon–Tue <strong class="red">17–18 November 2025</strong></li>
@@ -788,7 +789,7 @@
           The hosting organisation is the <a href="https://www.utwente.nl/en/contact/route/">University of Twente</a>,
           the location is the <strong>C2 room</strong> of the <a href="https://www.uparkhotel.nl/en">U Park Hotel</a>
           on the campus of the said university.
-          Registrations are handled through <a href="https://www.eventbrite.com/e/tickets-benevol-2025-1947032078359" target="_blank">EventBrite</a>.
+          Registrations are handled through <a href="https://www.eventbrite.com/e/tickets-benevol-2025-1947032078359">EventBrite</a>.
         </p>
 
         <p style="text-align: center;">
