--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
 
   <link href="css/creative.css" rel="stylesheet">
   <link href="css/mundane.css" rel="stylesheet">
-
-  <base target="_blank">
 </head>
 
 <body id="page-top">
@@ -45,14 +43,11 @@
           <a class="nav-link js-scroll-trigger" href="#organisation">Organisation</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#venue">Venue &amp; Registration</a>
+          <a class="nav-link js-scroll-trigger" href="#venue">Venue&nbsp;&amp;&nbsp;Registration</a>
         </li>
-        <!--<li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#proceedings">Proceedings</a>
-        </li>-->
-        <!-- <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#sponsors">Sponsors</a>
-        </li> -->
+        <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="pre/index.html">Proceedings</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#history">History</a>
         </li>
