connect pre-proceedings PDFs to the front page

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <section id="program">
   <div class="container">
     <h2>Programme</h2>
-    <div style="text-align: center;">(tentative & subject to change)</div>
+    <div style="text-align: center;">(tentative; see also ❗<a href="pre">pre-proceedings</a>❗)</div>
     <hr>
     <div class="col">
       <div class="row">
@@ -174,7 +174,7 @@
                   <td>11:30 – 11:50</td>
                   <td>🚀</td>
                   <td>
-                    <span class="talk">An Introduction to Indirect Code Completion</span>
+                    <span class="talk"><a href="pre/paper01.pdf">An Introduction to Indirect Code Completion</a></span>
                     <br/>
                     <span class="presenter">Nhat</span> and
                     <span class="presenter">Vadim Zaytsev</span>
@@ -184,7 +184,7 @@
                   <td>11:50 – 12:00</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk">Same Size, Different Costs: Phase-Level Energy Variations in Transformer Models during Code Generation</span>
+                    <span class="talk"><a href="pre/paper02.pdf">Same Size, Different Costs: Phase-Level Energy Variations in Transformer Models during Code Generation</a></span>
                     <br/>
                     <span class="presenter">Lola Solovyeva</span>
                   </td>
@@ -193,7 +193,7 @@
                   <td>12:00 – 12:10</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk">The Cost of AI-Assisted Coding: Energy vs. Accuracy in Language Models</span>
+                    <span class="talk"><a href="pre/paper03.pdf">The Cost of AI-Assisted Coding: Energy vs. Accuracy in Language Models</a></span>
                     <br/>
                     <span class="presenter">Negar Alizadeh</span>,
                     <span class="presenter">Boris Belchev</span>,
@@ -205,7 +205,7 @@
                   <td>12:10 – 12:30</td>
                   <td>🚀</td>
                   <td>
-                    <span class="talk">Bridging CPU and GPU in Rust</span>
+                    <span class="talk"><a href="pre/paper04.pdf">Bridging CPU and GPU in Rust</a></span>
                     <br/>
                     <span class="presenter">Niek Aukes</span>,
                     <span class="presenter">Cristian-Andrei Begu</span>, and
@@ -230,7 +230,7 @@
                   <td>14:00 – 14:10</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk">Sampling Threat when Mining Generalizable Inter-Library Usage Patterns</span>
+                    <span class="talk"><a href="pre/paper05.pdf">Sampling Threat when Mining Generalizable Inter-Library Usage Patterns</a></span>
                     <br/>
                     <span class="presenter">Yunior Pacheco</span>,
                     <span class="presenter">Coen De Roover</span>, and
@@ -241,7 +241,7 @@
                   <td>14:10 – 14:20</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk">An Analysis of Code Clones in GitHub Actions Workflows</span>
+                    <span class="talk"><a href="pre/paper06.pdf">An Analysis of Code Clones in GitHub Actions Workflows</a></span>
                     <br/>
                     <span class="presenter">Guillaume Cardoen</span>,
                     <span class="presenter">Alexandre Decan</span>, and
@@ -252,7 +252,7 @@
                   <td>14:20 – 14:30</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk">Determining Code Proficiency Levels from Python Textbooks</span>
+                    <span class="talk"><a href="pre/paper07.pdf">Determining Code Proficiency Levels from Python Textbooks</a></span>
                     <br/>
                     <span class="presenter">Ruksit Rojpaisarnkit</span>,
                     <span class="presenter">Gregorio Robles</span>,
@@ -265,7 +265,7 @@
                   <td>14:30 – 14:50</td>
                   <td>🔬</td>
                   <td>
-                    <span class="talk">BRIDGE: Building Reliable Interfaces for Developer Guidance and Exploration through Static Analysis and LLM Translation</span>
+                    <span class="talk"><a href="pre/paper08.pdf">BRIDGE: Building Reliable Interfaces for Developer Guidance and Exploration through Static Analysis and LLM Translation</a></span>
                     <br/>
                     <span class="presenter">Krishna Narasimhan</span> and
                     <span class="presenter">Mairieli Wessel</span>
@@ -275,7 +275,7 @@
                   <td>14:50 – 15:00</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk">On the Automation and Reuse Practices in GitHub Actions: Results of a Qualitative Survey</span>
+                    <span class="talk"><a href="pre/paper09.pdf">On the Automation and Reuse Practices in GitHub Actions: Results of a Qualitative Survey</a></span>
                     <br/>
                     <span class="presenter">Hassan Onsori Delicheh</span>,
                     <span class="presenter">Guillaume Cardoen</span>,
@@ -301,8 +301,7 @@
                   <td>15:30 – 15:50</td>
                   <td>🚀</td>
                   <td>
-                    <span class="talk">On the Structuring of <span class="latex">L<span class="a">A</span>T<span
-                        class="e">E</span>X</span> Projects</span>
+                    <span class="talk"><a href="pre/paper10.pdf">On the Structuring of <span class="latex">L<span class="a">A</span>T<span class="e">E</span>X</span> Projects</a></span>
                     <br/>
                     <span class="presenter">Wouter ten Brinke</span>,
                     <span class="presenter">Bart Griepsma</span>,
@@ -315,7 +314,7 @@
                   <td>15:50 – 16:10</td>
                   <td>🚀</td>
                   <td>
-                    <span class="talk">ClassViz: From Verification Tool to Research Vessel</span>
+                    <span class="talk"><a href="pre/paper11.pdf">ClassViz: From Verification Tool to Research Vessel</a></span>
                     <br/>
                     <span class="presenter">Satrio Adi Rukmono</span>
                   </td>
@@ -324,7 +323,7 @@
                   <td>16:10 – 16:30</td>
                   <td>🔬</td>
                   <td>
-                    <span class="talk">Pseudonymization as a Service: Compartmentalizing and Controlling Data Processing in Evolving Systems with Micropseudonymization</span>
+                    <span class="talk"><a href="pre/paper12.pdf">Pseudonymization as a Service: Compartmentalizing and Controlling Data Processing in Evolving Systems with Micropseudonymization</a></span>
                     <br/>
                     <span class="presenter">Job Doesburg</span>,
                     <span class="presenter">Bernard van Gastel</span>, and
@@ -372,7 +371,7 @@
                   <td>11:00 – 11:20</td>
                   <td>🔬</td>
                   <td>
-                    <span class="talk">On the Evolution of Direct Dependencies in npm Packages</span>
+                    <span class="talk"><a href="pre/paper13.pdf">On the Evolution of Direct Dependencies in npm Packages</a></span>
                     <br/>
                     <span class="presenter">Shahin Ebrahimi-Kia</span>,
                     <span class="presenter">Jesús M. González-Barahona</span>,
@@ -385,7 +384,7 @@
                   <td>11:20 – 11:30</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk">An Empirical Analysis of the GitHub Actions Language Usage and Evolution</span>
+                    <span class="talk"><a href="pre/paper14.pdf">An Empirical Analysis of the GitHub Actions Language Usage and Evolution</a></span>
                     <br/>
                     <span class="presenter">Aref Talebzadeh Bardsiri</span>,
                     <span class="presenter">Alexandre Decan</span>, and
@@ -396,7 +395,7 @@
                   <td>11:30 – 11:40</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk">Language-Level Support for Multiple Versions for Software Evolution</span>
+                    <span class="talk"><a href="pre/paper15.pdf">Language-Level Support for Multiple Versions for Software Evolution</a></span>
                     <br/>
                     <span class="presenter">Tomoyuki Aotani</span>,
                     <span class="presenter">Satsuki Kasuya</span>,
@@ -409,7 +408,7 @@
                   <td>11:40 – 11:50</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk">On the Transferability of a Bot Detection Model from GitHub to GitLab</span>
+                    <span class="talk"><a href="pre/paper16.pdf">On the Transferability of a Bot Detection Model from GitHub to GitLab</a></span>
                     <br/>
                     <span class="presenter">Cyril Moreau</span>
                   </td>
@@ -418,7 +417,7 @@
                   <td>11:50 – 12:00</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk">Evolution-Resilient Class Contours</span>
+                    <span class="talk"><a href="pre/paper17.pdf">Evolution-Resilient Class Contours</a></span>
                     <br/>
                     <span class="presenter">Mattia Giannaccari</span> and
                     <span class="presenter">Marco Raglianti</span>
@@ -450,7 +449,7 @@
                   <td>14:30 – 14:50</td>
                   <td>🚀</td>
                   <td>
-                    <span class="talk">Preliminary survey on CPS testing in various domains of the industry</span>
+                    <span class="talk"><a href="pre/paper18.pdf">Preliminary survey on CPS testing in various domains of the industry</a></span>
                     <br/>
                     <span class="presenter">Guillaume Nguyen</span> and <span class="presenter">Xavier Devroey</span>
                   </td>
@@ -459,8 +458,7 @@
                   <td>14:50 – 15:10</td>
                   <td>🔬</td>
                   <td>
-                    <span
-                        class="talk">FlaDaGe: A Framework for Generation of Synthetic Data to Compare Flakiness Scores</span>
+                    <span class="talk"><a href="pre/paper19.pdf">FlaDaGe: A Framework for Generation of Synthetic Data to Compare Flakiness Scores</a></span>
                     <br/>
                     <span class="presenter">Mert Ege Can</span>,
                     <span class="presenter">Joanna Kisaakye</span>,
@@ -472,7 +470,7 @@
                   <td>15:10 – 15:30</td>
                   <td>🔁</td>
                   <td>
-                    <span class="talk">Evaluating Test-Driven Code Generation: A Replication Study</span>
+                    <span class="talk"><a href="pre/paper20.pdf">Evaluating Test-Driven Code Generation: A Replication Study</a></span>
                     <br/>
                     <span class="presenter">Giovanni Rosa</span> and
                     <span class="presenter">Jesús Maria González-Barahona</span>
@@ -594,7 +592,7 @@
         <ul>
           <li><b>Submission Deadline:</b> Fri 3 October 2025</li>
           <li><b>Author Notification Deadline:</b> Fri 24 October 2025</li>
-          <li><b>Author <a href="https://www.eventbrite.com/e/tickets-benevol-2025-1947032078359">Registration</a>
+          <li><b>Author <a href="https://www.eventbrite.com/e/tickets-benevol-2025-1947032078359" target="_blank">Registration</a>
             Deadline:</b> <strong class="red">Mon 10 November 2025</strong></li>
           <li><b><strong class="grn">Pre</strong>-proceedings Camera-Ready Deadline:</b> Fri 7 November 2025</li>
           <li><b>Workshop Date:</b> Mon–Tue <strong class="red">17–18 November 2025</strong></li>
@@ -784,7 +782,7 @@
           The hosting organisation is the <a href="https://www.utwente.nl/en/contact/route/">University of Twente</a>,
           the location is the <strong>C2 room</strong> of the <a href="https://www.uparkhotel.nl/en">U Park Hotel</a>
           on the campus of the said university.
-          Registrations are handled through <a href="https://www.eventbrite.com/e/tickets-benevol-2025-1947032078359">EventBrite</a>.
+          Registrations are handled through <a href="https://www.eventbrite.com/e/tickets-benevol-2025-1947032078359" target="_blank">EventBrite</a>.
         </p>
 
         <p style="text-align: center;">
