unveil the seventh paper

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                   <td>14:20 – 14:30</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk"><a href="https://surfdrive.surf.nl/s/aacnCYRSs6N7aRD">Determining Code Proficiency Levels from Python Textbooks</a></span>
+                    <span class="talk"><a href="pre/paper07.pdf">A Method for Inferring Python Proficiency from Textbooks</a></span>
                     <br/>
                     <span class="presenter">Ruksit Rojpaisarnkit</span>,
                     <span class="presenter">Gregorio Robles</span>,
