--- a/index.html
+++ b/index.html
@@ -586,15 +586,14 @@
 
         <h4>Important Dates</h4>
         <p class="text">
-          Below, you can find the important dates. <b>Please note that all dates are in the Anywhere on Earth (AoE,
-          23:59) calendar designation.</b>
+          All dates are in the Anywhere on Earth (AoE, 23:59) calendar designation.
         </p>
         <ul>
           <li><b>Submission Deadline:</b> Fri 3 October 2025</li>
           <li><b>Author Notification Deadline:</b> Fri 24 October 2025</li>
           <li><b>Author <a href="https://www.eventbrite.com/e/tickets-benevol-2025-1947032078359" target="_blank">Registration</a>
-            Deadline:</b> <strong class="red">Mon 10 November 2025</strong></li>
-          <li><b><strong class="grn">Pre</strong>-proceedings Camera-Ready Deadline:</b> Fri 7 November 2025</li>
+            Deadline:</b> Mon 10 November 2025</li>
+          <li><a href="pre"><strong class="grn">Pre</strong>-<strong class="blk">proceedings</strong></a> Camera-Ready Deadline:</b> Fri 7 November 2025</li>
           <li><b>Workshop Date:</b> Mon–Tue <strong class="red">17–18 November 2025</strong></li>
           <li><b><strong class="grn">Post</strong>-proceedings Camera-Ready Deadline:</b> Fri 19 December 2025</li>
         </ul>
