--- a/index.html
+++ b/index.html
@@ -622,6 +622,9 @@
           </a>
         </div>
         <div class="card">
+            <div class="pic"></div>
+        </div>
+        <div class="card">
           <a href="https://fernandocastor.github.io">
             <img class="pic" src="img/fernando.jpg" alt="Fernando Castor Picture">
           </a>
@@ -630,19 +633,6 @@
             <p class="person">
               <b>Programme Chair</b><br/>
               UTwente<br/>
-              The Netherlands
-            </p>
-          </a>
-        </div>
-        <div class="card">
-          <a href="https://www.tue.nl/en/research/researchers/michel-chaudron">
-            <img class="pic" src="img/michel.jpg" alt="Michel Chaudron Picture">
-          </a>
-          <a href="https://www.tue.nl/en/research/researchers/michel-chaudron">
-            <h5>Michel Chaudron</h5>
-            <p class="person">
-              <b>Hackathon Chair</b><br/>
-              TU/e<br/>
               The Netherlands
             </p>
           </a>
