feat: Close registration

--- a/index.html
+++ b/index.html
@@ -591,11 +591,10 @@
         <ul>
           <li><b>Submission Deadline:</b> Fri 3 October 2025</li>
           <li><b>Author Notification Deadline:</b> Fri 24 October 2025</li>
-          <li><b>Author <a href="https://www.eventbrite.com/e/tickets-benevol-2025-1947032078359" target="_blank">Registration</a>
-            Deadline:</b> Mon 10 November 2025</li>
-          <li><a href="pre"><strong class="grn">Pre</strong>-<strong class="blk">proceedings</strong></a> Camera-Ready Deadline:</b> Fri 7 November 2025</li>
+          <li><b>Author Registration Deadline:</b> Mon 10 November 2025</li>
+          <li><b><a href="pre"><span class="grn">Pre</span><span class="blk">-proceedings</span></a> Camera-Ready Deadline:</b> Fri 7 November 2025</li>
           <li><b>Workshop Date:</b> Mon–Tue <strong class="red">17–18 November 2025</strong></li>
-          <li><b><strong class="grn">Post</strong>-proceedings Camera-Ready Deadline:</b> Fri 19 December 2025</li>
+          <li><b><span class="grn">Post</span>-proceedings Camera-Ready Deadline:</b> Fri 19 December 2025</li>
         </ul>
       </div>
     </div>
@@ -776,8 +775,9 @@
 
         <p style="text-align: center;">
           <button class="cta"
+                  disabled
                   onclick="window.open('https://www.eventbrite.com/e/tickets-benevol-2025-1947032078359', '_blank')">
-            Register Now
+            Registration Closed
           </button>
         </p>
 
