add a slot for the opening

--- a/index.html
+++ b/index.html
@@ -109,8 +109,12 @@
             </th>
           </tr>
           <tr>
-            <td>09:00 – 10:00</td>
-            <td>Walk-in reception</td>
+            <td>09:00 – 09:45</td>
+            <td>Reception, tea, coffee</td>
+          </tr>
+          <tr>
+            <td>09:45 – 10:00</td>
+            <td>Workshop opening</td>
           </tr>
           <tr>
             <td>10:00 – 11:00</td>
