--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             <td>09:30 – 10:30</td>
             <td class="with-emoji">
               <strong>🔥 Keynote:</strong>
-              <span class="talk"><em>[TBA]</em></span>
+              <span class="talk"><em>Language-Level Support for Multiple Versions for Software Evolution</em></span>
               <br>
               <span class="presenter">Hidehiko Masuhara</span>
             </td>
@@ -327,7 +327,7 @@
             <td>Break</td>
           </tr>
           <tr>
-            <td>11:00 – 12:00</td>
+            <td>11:00 – 11:50</td>
             <td><strong>Evolving Software Ecosystems</strong></td>
           </tr>
           <tr>
@@ -357,6 +357,7 @@
                     <span class="presenter">Tom Mens</span>
                   </td>
                 </tr>
+                <!--
                 <tr>
                   <td>11:30 – 11:40</td>
                   <td>🌟</td>
@@ -370,8 +371,9 @@
                     <span class="presenter">Yudai Tanabe</span>
                   </td>
                 </tr>
+                -->
                 <tr>
-                  <td>11:40 – 11:50</td>
+                  <td>11:30 – 11:40</td>
                   <td>🌟</td>
                   <td>
                     <span class="talk"><a href="pre/paper16.pdf">On the Transferability of a Bot Detection Model from GitHub to GitLab</a></span>
@@ -380,7 +382,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>11:50 – 12:00</td>
+                  <td>11:40 – 11:50</td>
                   <td>🌟</td>
                   <td>
                     <span class="talk"><a href="pre/paper17.pdf">Evolution-Resilient Class Contours</a></span>
@@ -393,7 +395,7 @@
             </td>
           </tr>
           <tr>
-            <td>12:00 – 13:00</td>
+            <td>11:50 – 12:45</td>
             <td>Lunch</td>
           </tr>
           <tr>
