converge with reality

--- a/index.html
+++ b/index.html
@@ -93,9 +93,11 @@
             </th>
           </tr>
           <tr>
-            <td><img src="img/stanislaus.png" alt="stanislaus logo"></td>
+            <td>19:00 – 23:00</td>
             <td style="vertical-align: middle;">
-              19:00+ Unofficial pre-opening at 🍻<a href="https://stanislausbrewskovitch.nl/">Stanislaus Brewskovitch</a>🍔
+              Unofficial pre-opening at
+                <br>🍺<a href="https://stanislausbrewskovitch.nl/">Stanislaus Brewskovitch</a> and
+                <br>🍻<a href="https://twentschefoodhal.nl/">Twentsche Foodhal</a>🍔
             </td>
           </tr>
           <tr class="sep">
@@ -120,7 +122,7 @@
             <td>10:00 – 11:00</td>
             <td class="with-emoji">
               <strong>🔥 Keynote:</strong>
-              <span class="talk">From the Trenches</span>
+              <span class="talk"><em>From the Trenches</em></span>
               <br>
               <span class="presenter with-emoji">Darius Blasband</span>
             </td>
@@ -156,7 +158,7 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>12:00 – 12:10</td>
+                  <td>12:20 – 12:30</td>
                   <td>🌟</td>
                   <td>
                     <span class="talk"><a href="pre/paper03.pdf">The Cost of AI-Assisted Coding: Energy vs. Accuracy in Language Models</a></span>
@@ -167,8 +169,22 @@
                     <span class="presenter">Patricia Kelbert</span>
                   </td>
                 </tr>
+              </table>
+            </td>
+          </tr>
+          <tr>
+            <td>12:35 – 13:40</td>
+            <td>Lunch</td>
+          </tr>
+          <tr>
+            <td>13:40 – 15:00</td>
+            <td><strong>Mining and Modelling of Software Knowledge</strong>
+          </tr>
+          <tr>
+            <td colspan="2">
+              <table class="sch">
                 <tr>
-                  <td>12:10 – 12:30</td>
+                  <td>13:40 – 14:00</td>
                   <td>🚀</td>
                   <td>
                     <span class="talk"><a href="pre/paper04.pdf">Bridging CPU and GPU in Rust</a></span>
@@ -178,25 +194,11 @@
                     <span class="presenter">Georgiana Caltais</span>
                   </td>
                 </tr>
-              </table>
-            </td>
-          </tr>
-          <tr>
-            <td>12:30 – 14:00</td>
-            <td>Lunch + Campus walk</td>
-          </tr>
-          <tr>
-            <td>14:00 – 15:00</td>
-            <td><strong>Mining and Modelling of Software Knowledge</strong>
-          </tr>
-          <tr>
-            <td colspan="2">
-              <table class="sch">
                 <tr>
                   <td>14:00 – 14:10</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk"><a href="pre/paper05.pdf">Sampling Threat when Mining Generalizable Inter-Library Usage Patterns</a></span>
+                    <span class="talk"><a href="pre/paper05.pdf">Sampling Threat when Mining Generalizable Inter-Library Usage Patterns</a> (cf. <a href="https://doi.org/10.1016/j.scico.2025.103393">SCP</a>)</span>
                     <br>
                     <span class="presenter">Yunior Pacheco</span>,
                     <span class="presenter">Coen De Roover</span>, and
@@ -448,7 +450,15 @@
             </td>
           </tr>
           <tr>
-            <td>16:00 +</td>
+            <td>15:30 – 16:00</td>
+            <td>Break</td>
+          </tr>
+          <tr>
+            <td>16:00 – 17:00</td>
+            <td><strong>Tool Market</strong></td>
+          </tr>
+          <tr>
+            <td>17:00 +</td>
             <td>Closing and afterparty</td>
           </tr>
           </tbody>
