CORE->DIVE fix, moar links

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                   <td>14:00 – 14:10</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk"><a href="pre/paper05.pdf">Sampling Threat when Mining Generalizable Inter-Library Usage Patterns</a> (cf. <a href="https://doi.org/10.1016/j.scico.2025.103393">SCP</a>)</span>
+                    <span class="talk"><a href="pre/paper05.pdf">Sampling Threat when Mining Generalizable Inter-Library Usage Patterns</a> (cf. <a href="https://doi.org/10.1016/j.scico.2025.103393" class="ext">SCP</a>)</span>
                     <br>
                     <span class="presenter">Yunior Pacheco</span>,
                     <span class="presenter">Coen De Roover</span>, and
@@ -220,7 +220,7 @@
                   <td>14:20 – 14:30</td>
                   <td>🌟</td>
                   <td>
-                    <span class="talk"><a href="pre/paper07.pdf">A Method for Inferring Python Proficiency from Textbooks</a></span>
+                    <span class="talk"><a href="pre/paper07.pdf">A Method for Inferring Python Proficiency from Textbooks</a> (cf. <a href="https://doi.org/10.1109/ICSME58944.2024.00035" class="ext">ICSME’24</a> &amp; <a href="https://doi.org/10.1145/3524610.3527878" class="ext">ICPC’22</a>)</span>
                     <br>
                     <span class="presenter">Ruksit Rojpaisarnkit</span>,
                     <span class="presenter">Gregorio Robles</span>,
@@ -231,7 +231,7 @@
                 </tr>
                 <tr>
                   <td>14:30 – 14:50</td>
-                  <td>🔬</td>
+                  <td>🚀</td>
                   <td>
                     <span class="talk"><a href="pre/paper08.pdf">BRIDGE: Building Reliable Interfaces for Developer Guidance and Exploration through Static Analysis and LLM Translation</a></span>
                     <br>
